fixed header spacing
fixed header spacing

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ body{
 	line-height: 1.25em;
 	font-family: "Bell MT", serif;
 	max-width:1500px;
+	min-width: 320px;
 	margin: 0 auto;
 	background-color: var(--plum);
 }
@@ -89,13 +90,18 @@ body{
 /* Header Styles */
 header{
 	background-color: var(--silver);
-	border-radius: 0 0 40px 40px;
-	padding: 2rem;
-	display: grid;
-	grid-template-rows: 1fr 1fr;
-	grid-template-columns: 1fr 1fr;
+	padding: 1rem;
 	position: relative;
-	width: 100%;
+	width: max-content;
+	display: grid;
+	grid-template-columns: auto auto;
+	grid-template-rows: auto auto;
+}
+
+header a{
+	grid-column: 1/2;
+	grid-row: 1/2;
+	align-self: end;
 }
 
 header h1{
@@ -103,15 +109,8 @@ header h1{
 	line-height: 3rem;
 	font-weight: bold;
 	color: var(--plum);
-	padding: 1rem;
-	padding-left: 2rem;
-	grid-row: 2/3;
-	grid-column: 2/3;
-}
-
-header a{
-	grid-row: 2/3;
 	grid-column: 1/2;
+	grid-row: 2/3;
 }
 
 /* Navigation Styles */
@@ -120,6 +119,12 @@ nav h2{
 	width: 1px;
 	height: 1px;
 }
+
+nav{
+	grid-column: 2/3;
+	grid-row: 1/3;
+}
+
 .hamburger-menu{
 	display: flex;
 	flex-direction: column;
@@ -127,7 +132,7 @@ nav h2{
 	border-radius: 100px;
 	width: max-content;
 	position: absolute;
-	right: 30px;
+	right: 25px;
 	top: 10px;
 	z-index: 2;
 	cursor: pointer;
@@ -172,18 +177,22 @@ nav h2{
 }
 
 .sidebar{
+	grid-column: 2/3;
+	grid-row: 2/3;
 	transition: translate 0.5s ease-in-out;
 	translate: 300%;
 	padding: 1rem;
 	margin-top: calc(var(--hamburger-height) + 1rem);
-	max-width: max-content;}
+	max-width: max-content;
+}
 
 .hamburger-menu:has(input:checked) + .sidebar{
-	translate: 100%;
+	translate: 10%;
 }
 
 .sidebar li{
 	background-color: var(--lavender);
+	max-width: 75px;
 	font-weight: bold;
 	padding: .5rem;
 	margin: .25rem;
